==> gaalalexandru/MSP432ValvanoWare/Lab4_Fitness_MSP432/os.c <==
#include <stdint.h>
#include "os.h"
#include "CortexM.h"
#include "BSP.h"
#include "../inc/msp432p401r.h"
#define NUMTHREADS  8        // maximum number of threads
#define NUMPERIODIC 2        // maximum number of periodic threads
#define STACKSIZE   100      // number of 32-bit words in stack per thread

void OS_EdgeTrigger_Init(int32_t *semaPt, uint8_t priority){
	edgeSemaphore = semaPt;
//***IMPLEMENT THIS***
  // P5.1 input with pullup
	P5SEL1 &= ~0x01; //GPIO
	P5SEL0 &= ~0x01; //GPIO
	P5DIR &= ~0x01; //Input
	P5REN |= 0x01;	//Enable resistor on pin 1
	P5OUT |= 0x01;	//Set register for pull-up, clear for pull-down	
  // (c) P5.1 is falling edge event
	P5IES |= 0x01; //Interrupt edge select, set for falling, clear for rising
  // (d) clear flag1 
	P5IFG &= ~0x01;	//Clear interrupt flag on pin1
  // (e) arm interrupt on P5.1
	P5IE |= 0x01;	//Arm port 5, pin 1 for interrupts, clear to disarm or use busy - wait sync
  //Check NVIC interrupt number in device header file & atasheet
	// (f) priority 
	NVIC_IPR9 = ((NVIC_IPR9&0x00FFFFFF) | (0x40000000));	//Set interrupt priority, only the last 7 bits
  // (g) enable interrupt 39 in NVIC
	NVIC_ISER1 = 0x00000080;	//Enable interrupt source 39 (port5) in NVIC
}

void OS_EdgeTrigger_Restart(void){
//***IMPLEMENT THIS***
	uint8_t static laststatus;
	laststatus = (P5IN&0x01);	//status of pin 1
	if(laststatus) { //Pin now is high, falling edge will folow
		P5IES |= 0x01;   // next will be falling edge 
	}
	//else {	//Rising edge will follow
	//	P5IES &= ~0x01;   // next will be rising edge		
	//}
  // (g) enable interrupt 39 in NVIC
  P5IE |= 0x01; // re-arm interrupt on P5.1	
  // (d) clear flag1
	P5IFG &= 0x01; //Acknowledge the interrupt, clear flag
}
